restarted Module12 project, chanegd test config, response handling, rebuilt restaurant stack